# venore

./: .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  clippy.toml  rustfmt.toml
crates/venore-api/: Cargo.toml
crates/venore-api/src/: main.rs
crates/venore-api/src/handlers/: mod.rs
crates/venore-api/src/routes/: context.rs  mod.rs  projects.rs
crates/venore-cli/: Cargo.toml  README.md
crates/venore-cli/examples/: test_checkpoint.rs
crates/venore-cli/src/: analysis.rs  cli.rs  context_generation.rs  main.rs  wizard.rs
crates/venore-cli/src/commands/: analysis_output.rs  analyze.rs  islands.rs  islands_tune.rs  mod.rs  modules.rs  parse.rs  scan.rs  wizard.rs
crates/venore-cli/src/formatter/: json.rs  mod.rs  pretty.rs  text.rs
crates/venore-cli/tests/fixtures/: _all_scenarios.json.bak  code-baseline.jsonl  code_scenarios.json  eval-results.jsonl  knowledge_scenarios.json
crates/venore-core/: Cargo.toml  TESTING_LLM.md
crates/venore-core/examples/: compare_memories.rs  generate_context_simple.rs  inspect_project.rs  run_analysis_test.rs  test_depth_levels.rs  test_full_pipeline.rs  test_gemini_basic.rs  test_llm_advanced.rs  test_llm_basic.rs  test_llm_config.rs  test_openai_basic.rs  test_staleness_detection.rs
crates/venore-core/migrations/: 20260120_001_create_task_settings.sql
crates/venore-core/src/: entities.rs  error.rs  lib.rs  traits.rs
crates/venore-core/src/agents/: executor.rs  mod.rs  models.rs  pipeline.rs  repository.rs  seed.rs  snapshot.rs
crates/venore-core/src/analysis/: README.md  analysis_output.rs  file_scanner.rs  island_detector.rs  mod.rs  module_detector.rs  pipeline.rs
crates/venore-core/src/analysis/ast_parser/: c_lang.rs  cpp_lang.rs  csharp.rs  extractors.rs  gdscript.rs  go_lang.rs  java.rs  kotlin.rs  lang_config.rs  mod.rs  php.rs  python.rs  ruby.rs  rust_lang.rs  ts_js.rs
crates/venore-core/src/analysis/project_analyzer/: factory.rs  mod.rs  registry.rs  traits.rs
crates/venore-core/src/chat/: compaction.rs  connection_resolver.rs  context.rs  debug_log.rs  guardrails.rs  mod.rs  orchestrator.rs  pending_writes.rs  query_router.rs  repository.rs  title.rs
crates/venore-core/src/checkpoint/: manager.rs  mod.rs  types.rs
crates/venore-core/src/context/: cache.rs  file_storage.rs  frontmatter.rs  hash.rs  hash_storage.rs  mod.rs  prompts.rs  repository.rs  types.rs  writer.rs
crates/venore-core/src/context_updater/: branch_monitor.rs  change_mapper.rs  mod.rs  orchestrator.rs  updater_state.rs
crates/venore-core/src/core/: mod.rs
crates/venore-core/src/core/config/: defaults.rs  loader.rs  mod.rs  models.rs
crates/venore-core/src/dashboard/: mod.rs
crates/venore-core/src/error/: README.md
crates/venore-core/src/github/: auth.rs  branches.rs  client.rs  clone.rs  comments.rs  git_auth.rs  issues.rs  mod.rs  pr_analyzer.rs  pr_detail.rs  pulls.rs  repo.rs  repos.rs  types.rs
crates/venore-core/src/infrastructure/: mod.rs
crates/venore-core/src/infrastructure/config/: default_store.rs  keyring_store.rs  mock_store.rs  mod.rs  sqlite_store.rs
crates/venore-core/src/knowledge/: mod.rs  repository.rs  types.rs
crates/venore-core/src/layers/: analyzer.rs  mod.rs  types.rs
crates/venore-core/src/llm/: README.md  config.rs  error.rs  gateway.rs  mod.rs  registry.rs  router.rs  session_logger.rs  types.rs
crates/venore-core/src/llm/providers/: anthropic.rs  base.rs  (+8 more)
crates/venore-core/src/lsp/: client.rs  config.rs  diagnostics.rs  manager.rs  mod.rs  server.rs
crates/venore-core/src/memory/: file_storage.rs  formatter.rs  mod.rs  models.rs  repository.rs
crates/venore-core/src/mesh/: agent_loop.rs  discovery.rs  handler.rs  lifecycle.rs  mod.rs  protocol.rs  transport.rs  types.rs
crates/venore-core/src/ocean/: mod.rs  placement.rs  scanner.rs  service.rs  states.rs  test_utils.rs  types.rs
crates/venore-core/src/permissions/: mod.rs
crates/venore-core/src/project/: identity.rs  mod.rs  repository.rs  service.rs
crates/venore-core/src/prompts/: fragments.rs  mod.rs  models.rs  repository.rs  seed.rs
crates/venore-core/src/rag/: chunker.rs  embeddings.rs  graph_query.rs  indexer.rs  logbook.rs  logbook_repository.rs  mod.rs  repository.rs  searcher.rs  types.rs
crates/venore-core/src/research/: engine.rs  manager.rs  mod.rs  prompts.rs  repository.rs  types.rs  worker.rs
crates/venore-core/src/session/: git_ops.rs  mod.rs  repository.rs  types.rs
crates/venore-core/src/skills/: mod.rs  registry.rs
crates/venore-core/src/snapshot/: mod.rs
crates/venore-core/src/terminal/: debug.rs  manager.rs  mod.rs  session.rs
crates/venore-core/src/tools/: definitions.rs  executor.rs  fuzzy_match.rs  mod.rs  names.rs
crates/venore-core/src/utils/: README.md  atomic_json.rs  logging.rs  mod.rs  path.rs  process.rs  staleness.rs  string.rs  validation.rs
crates/venore-core/src/wizard/: batch_generation.rs  batch_manager.rs  cancellation.rs  event_emitter.rs  mod.rs  session.rs  session_manager.rs  ui_state.rs  validator.rs
crates/venore-core/tests/integration/: mod.rs  project_analyzer_e2e.rs
crates/venore-desktop/: Cargo.toml  package.json  pnpm-lock.yaml  tauri.conf.json  tauri.dev.conf.json
crates/venore-desktop/icons/: create_icons.ps1  icon.icns
crates/venore-desktop/src/: ai_connections.rs  lib.rs  main.rs  notifications.rs  state.rs
crates/venore-desktop/src/commands/: agents.rs  ai_connections.rs  cloud.rs  context.rs  context_updater.rs  currents.rs  dashboard.rs  editor.rs  github.rs  knowledge.rs  llm.rs  memory.rs  mesh.rs  mod.rs  ocean.rs  pending_writes.rs  projects.rs  prompts.rs  rag.rs  research.rs  session.rs  skills.rs  snapshot.rs  system.rs  terminal.rs  wizard.rs
crates/venore-desktop/src/utils/: command.rs  mod.rs
crates/venore-desktop/ui/: .npmrc  PNPM_REQUIRED.md  README.md  WHY_PNPM.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
crates/venore-desktop/ui/src/: App.tsx  DESIGN_SYSTEM.md  index.css  main.tsx
(+424 files in other folders)
