# Venore — Cargo workspace
# Workspace root containing all Rust crates.
# A workspace lets crates share dependencies and build together.

[workspace]
resolver = "2"

# Workspace member crates
members = [
    "crates/venore-core",      # Business logic (shared library)
    "crates/venore-api",       # REST API server (Axum)
    "crates/venore-desktop",   # Tauri desktop app
    "crates/venore-cli",       # CLI tools
]

# Dependencies shared across all crates.
# Ensures every crate uses the same version.
[workspace.dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# File system
walkdir = "2.5"
notify = "7.0"

# Parsing
serde_yaml = "0.9"
pulldown-cmark = "0.12"
tree-sitter = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-java = "0.23"
tree-sitter-go = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-php = "0.23"
tree-sitter-ruby = "0.23"
# Kotlin community grammar — `tree-sitter-kotlin-ng` is the actively
# maintained fork on tree-sitter-grammars/, compatible with the
# tree-sitter 0.24 API. The original `fwcd/tree-sitter-kotlin` is
# still on 0.3.x and ties us to an older Tree-sitter ABI.
tree-sitter-kotlin-ng = "1.1"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
# GDScript grammar uses its own versioning scheme (currently 6.x).
# Verified compatible with the tree-sitter 0.24 ABI at 6.1.0.
tree-sitter-gdscript = "6.1"

# Security & Configuration
keyring = { version = "3.6", features = ["apple-native", "windows-native", "sync-secret-service"] }
secrecy = { version = "0.10", features = ["serde"] }
dirs = "6.0"

# Async utilities
futures = "0.3"
async-trait = "0.1"
rand = "0.8"

# Parsing (additional)
toml = "0.8"

# LSP
lsp-types = "0.97"

# Utilities
once_cell = "1.19"
chrono = { version = "0.4", features = ["serde"] }

# Build profiles
[profile.release]
opt-level = 3          # Max optimization
lto = true             # Link-time optimization
codegen-units = 1      # Better optimization, slower compile
strip = true           # Strip debug symbols
panic = "abort"        # Smaller binary size

[profile.dev]
opt-level = 0          # No optimization
debug = true           # Include debug symbols
