[package]
name = "venore-api"
version = "0.1.0"
edition = "2021"
authors = ["Edinson Johender <hi@skalar.app>"]
license = "AGPL-3.0-or-later"
description = "REST API server for Venore - provides HTTP endpoints for web/mobile clients"

# Executable binary.
# Run with: cargo run -p venore-api
[[bin]]
name = "venore-api"
path = "src/main.rs"

[dependencies]
# Local workspace dependency
venore-core = { path = "../venore-core" }

# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Web framework — Axum (recommended for REST APIs in Rust)
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }

# Server
hyper = { version = "1.5", features = ["full"] }

# Configuration
dotenvy = "0.15"

# UUID (used by examples)
uuid = { version = "1.11", features = ["v4", "serde"] }

[dev-dependencies]
axum-test = "18.7"
